--- a/app/src/main/res/layout/cargo_activity.xml
+++ b/app/src/main/res/layout/cargo_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,6 +15,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:paddingLeft="25dp"
+        android:paddingRight="5dp"
         android:text="Name" />
 
     <TextView
@@ -42,6 +44,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:paddingLeft="5dp"
         android:paddingRight="25dp"
         android:text="####"
         app:layout_constraintRight_toRightOf="parent" />
