--- a/app/src/main/res/layout/planet_activity.xml
+++ b/app/src/main/res/layout/planet_activity.xml
@@ -132,7 +132,7 @@
                 android:id="@+id/increase_quantity_button"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:text="string/plus"
+                android:text="@+string/plus"
                 app:layout_constraintTop_toTopOf="@id/text_quantity_desired"
                 app:layout_constraintLeft_toRightOf="@id/text_quantity_desired" />
 
@@ -227,7 +227,7 @@
             <TextView
                 android:id="@+id/fueltanklabel"
                 android:layout_width="120dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="@string/fueltanklabel"
                 android:gravity="center_horizontal"
@@ -235,6 +235,7 @@
                 android:textColor="#03a464"
                 android:textSize="18sp"
                 />
+            <!--android:layout_height:"wrap_content"-->
 
             <TextView
                 android:id="@+id/current_fuel_label"
