--- a/app/src/main/res/layout/cargo_activity.xml
+++ b/app/src/main/res/layout/cargo_activity.xml
@@ -13,17 +13,22 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:paddingLeft="25dp"
         android:paddingRight="5dp"
-        android:text="Name" />
+        android:text="Name"
+        app:layout_constraintEnd_toStartOf="@+id/remaining_cargo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/remaining_cargo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="Remaining Cargo: "
-        tools:layout_editor_absoluteX="168dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="168dp"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/credits_label"
@@ -34,7 +39,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Credits: "
-        app:layout_constraintRight_toLeftOf="@id/credits" />
+        app:layout_constraintRight_toLeftOf="@id/credits"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/credits"
@@ -47,7 +53,8 @@
         android:paddingLeft="5dp"
         android:paddingRight="25dp"
         android:text="####"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <LinearLayout
         android:id="@+id/linearLayout3"
@@ -55,7 +62,8 @@
         android:layout_height="729dp"
         android:orientation="vertical"
         android:padding="16dp"
-        tools:layout_editor_absoluteY="2dp">
+        tools:layout_editor_absoluteY="2dp"
+        tools:ignore="MissingConstraints">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/cargoRecycler"
