--- a/app/src/main/res/layout/market_activity.xml
+++ b/app/src/main/res/layout/market_activity.xml
@@ -16,7 +16,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Name"/>
+        android:text="Name"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/remaining_cargo"
@@ -27,7 +28,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintRight_toLeftOf="@id/credits_label"
-        android:text="Remaining Cargo: "/>
+        android:text="Remaining Cargo: "
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/credits_label"
@@ -38,7 +40,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintRight_toLeftOf="@id/credits"
-        android:text="Credits: "/>
+        android:text="Credits: "
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/credits"
@@ -51,7 +54,8 @@
         android:paddingLeft="5dp"
         android:paddingRight="25dp"
         android:text="####"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <LinearLayout
         android:layout_width="match_parent"
