--- a/app/src/main/res/layout/market_activity.xml
+++ b/app/src/main/res/layout/market_activity.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Name"
+        android:text="@string/name"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -28,7 +28,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintRight_toLeftOf="@id/credits_label"
-        android:text="Remaining Cargo: "
+        android:text="@string/remaining_cargo"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -40,7 +40,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintRight_toLeftOf="@id/credits"
-        android:text="Credits: "
+        android:text="@string/credits_label"
         tools:ignore="MissingConstraints" />
 
     <TextView
